feat: teacher component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         <a mat-button [routerLink]="'/'" class="source-name"><mat-icon class="icon">announcement</mat-icon>Announcements</a>
       </mat-list-item>
       <mat-list-item class="list-item" (click)="sidenav.close()">
-        <a mat-button [routerLink]="'/'" class="source-name"><mat-icon class="icon">perm_identity</mat-icon>Teachers</a>
+        <a mat-button [routerLink]="'/teachers'" class="source-name"><mat-icon class="icon">perm_identity</mat-icon>Teachers</a>
       </mat-list-item>
       <mat-list-item class="list-item" (click)="sidenav.close()">
         <a mat-button [routerLink]="'/'" class="source-name"><mat-icon class="icon">supervisor_account</mat-icon>Top Teachers</a>
