feat: dashboard with service announcement added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <span class="side-title">Sidenav Director</span>
       <mat-divider></mat-divider>
       <mat-list-item class="list-item" (click)="sidenav.close()">
-        <a mat-button [routerLink]="'/'" class="source-name"><mat-icon class="icon">dashboard</mat-icon>Dashboard</a>
+        <a mat-button [routerLink]="'/dashboard'" class="source-name"><mat-icon class="icon">dashboard</mat-icon>Dashboard</a>
       </mat-list-item>
       <mat-list-item class="list-item" (click)="sidenav.close()">
         <a mat-button [routerLink]="'/'" class="source-name"><mat-icon class="icon">announcement</mat-icon>Announcements</a>
